src/objects/pse__HolidayObj__c.object
<CustomObject>
    <customHelpPage>pse__HolidayHelp</customHelpPage>
    <description>Use the holiday object to define government/public holidays, not to book paid time off (PTO) or vacations. You should create government/public holidays for each work calendar in your organization, on the Holidays related list: for example, you can create a holiday for July 4th 2014, with zero work hours, on the US Full-Time work calendar. Depending on configuration, government/public holidays are taken into account when setting scheduling strategies. Holidays have a lookup relationship to work calendars.</description>
    <fields>
        <fullName>pse__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Holidays</relationshipLabel>
        <relationshipName>Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Work_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of hours worked on this day (for example, 0 for a full day off, 4 for a half day)</inlineHelpText>
        <label>Work Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Holiday</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Date__c</columns>
        <columns>pse__Work_Calendar__c</columns>
        <columns>pse__Work_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>